main.tf
terraform {
  required_providers {
    azurerm = {
      source = "hashicorp/azurerm"
      version = "3.39.1"
    }
  }
}

provider "azurerm" {
  features {
    
  }
}

resource "azurerm_resource_group" "rg1" {
  name     = var.rg_name
  location = var.location
}

resource "azurerm_virtual_network" "vnet1" {
  name                = "${var.vm_name}-network"
  address_space       = var.vnet_address_space
  location            = var.location
  resource_group_name = azurerm_resource_group.rg1.name
}

resource "azurerm_subnet" "subnet1" {
  name                 = "${var.vm_name}-subnet"
  resource_group_name  = azurerm_resource_group.rg1.name
  virtual_network_name = azurerm_virtual_network.vnet1.name
  address_prefixes     = var.subnet_address_space
}

resource "azurerm_public_ip" "pip1" {
  name                = "${var.vm_name}-pip"
  resource_group_name = azurerm_resource_group.rg1.name
  location            = var.location
  allocation_method   = "Static"
}

resource "azurerm_network_interface" "main" {
  name                = "${var.vm_name}-nic"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg1.name

  ip_configuration {
    name                          = "testconfiguration1"
    subnet_id                     = azurerm_subnet.subnet1.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id = azurerm_public_ip.pip1.id
  }
}

resource "azurerm_virtual_machine" "vm1" {
  name                  = var.vm_name
  location              = var.location
  resource_group_name   = azurerm_resource_group.rg1.name
  network_interface_ids = [azurerm_network_interface.main.id]
  vm_size               = "Standard_DS1_v2"
  delete_os_disk_on_termination = true
  delete_data_disks_on_termination = true

  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "16.04-LTS"
    version   = "latest"
  }
  storage_os_disk {
    name              = "myosdisk1"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }
  os_profile {
    computer_name  = "hostname"
    admin_username = var.admin_username
    admin_password = var.admin_password
    custom_data = data.template_file.userdata.rendered
  }
  os_profile_linux_config {
    disable_password_authentication = true
    ssh_keys {
      path = "/home/oguzhan/.ssh/authorized_keys"
      key_data = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQChzaZHLIqKgG3xb2+XqnXNlYmkBvd6DMC5S1Z+ezee/sdj4qTQQYMSQxv0/nNIdZ6D/Uz0laGmKWbHKcocGnpcumTHkIceIBp+OTSJYUH2Y2thwQ0rpXdukOXNHkj+2CxYcHmcteK3U6trTohHtIXfyETQ7EeiULolAvNEywtHpE2qHWsNRK15+1dT4/27WJPidlh792I3DWGgwOiuJhjzpQ4SONB6sex1kUfX01J0VoVf2w9t/kIY7sEjOflgyVs3tMncsUO/KyGpEWn4ljUKxLMWP8Wvi0vJrRXh1w5yBeWv/xofenMEX1b2K5OWKq/Z8uhbjPvaX2Klrktj1MIz5LyZdmMCCWcFNqRcnI7h8IVKgd6BIs3QJeeNpi1n2euTFEtuXdZUFGVuODDPXqZk7GaNlX6jx6qMXeVA8WIICJGW1XzdWBs4iVHZH9 [...]
    }

  }
}


data "template_file" "userdata" {
  template = file("${abspath(path.module)}/userdata.sh")
}
resource "azurerm_network_interface_security_group_association" "nic1" {
  network_interface_id      = azurerm_network_interface.main.id
  network_security_group_id = azurerm_network_security_group.nsg1.id
}

resource "azurerm_network_security_group" "nsg1" {
    name                = "nsgwithsshopen"
    location            = var.location
    resource_group_name = azurerm_resource_group.rg1.name

    security_rule {
        name                       = "AllowSSH"
        priority                   = 100
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }

security_rule {
        name                       = "AllowJenkins"
        priority                   = 120
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "8080"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
}
# resource "azurerm_virtual_machine_extension" "ssh" {

#   name                         = "ssh"
#   virtual_machine_id           = azurerm_virtual_machine.vm1.id
#   publisher                    = "Microsoft.Azure.Extensions"
#   type                         = "CustomScript"
#   type_handler_version         = "2.0"
#   settings = <<SETTINGS
#     {
#         "commandToExecute": "mkdir -p ~/.ssh && echo 'ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCYBkJ3y1tV6p8KApdM+Z97qYqO8QMTdL66B3ZRFA/MQ6q6FutPI4uyCTWbSB3z6vQU0OqfkJhSRElgUbBVM8aCa+we5CSa9Cr5AuM2MCJlelZTnfBAOUY1CaIRlvXB5jNLEplRpY2wnh2S6yRMbD72U6cE/zPW0Zc+0uu2ffzdy2wxhc0vAoLn3h5OwgZ1NoGsZMPQYZyPuxlfeShaC7EXqRDXvcRZKQktElnSQcyRN14glgt+AwYUFYF7vjxju2HnVsgJi8saPtEKvYETwkwmhs9KZJOavxI8+hveoSaFN5zMhuFIVDAo5G1LtmsDir7ibAGG4XZuuCMLhlGUxZLBJt7+AvG7AnjJnigBnAhaC1LGG3HKpkZ/YxQaZnv2vWiWqohD+FTY8uDzjug2eK0Y [...]
#     }
#   SETTINGS
# }


# ssh-keygen -t rsa -b 4096 -C "your_email@example.com"
